Update 'ezp9e5cu5-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:12167635cb57e0e6a12db94bc2a82bf04be303b5@sha256:a3d8c16a43aaab9ca95060338644597ffa8573fd892576c18609089284871470

--- a/components/ezp9e5cu5-python/overlays/development/deployment-patch.yaml
+++ b/components/ezp9e5cu5-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ezp9e5cu5-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:12167635cb57e0e6a12db94bc2a82bf04be303b5@sha256:a3d8c16a43aaab9ca95060338644597ffa8573fd892576c18609089284871470
+          name: container-image
